# routes/index.js
@@ -8,5 +8,8 @@ router.use("/", require("./swagger"));
    to handle routes.  */
 router.use("/accounts", require("./accounts"));
 
+// Set up route for schedules
+router.use("/schedule", require("./schedule"));
+
 // Exports router object to be used by the app elsewhere
 module.exports = router;
